feat(api-docs) add routes to the docs
